<resources>
    <string name="app_name">Doa &amp; Zikir App</string>
    <string name="txt_menu_dashboard">Kumpulan Doa &amp; Dzikir Sehari-hari</string>
    <string name="txt_menu_qauliah_shalat"><![CDATA[Sunah-Sunah Qauliah Dzikir & Doa Shalat]]></string>
    <string name="icon_desc_qauliah_shalat">icon Qauliah Shalat</string>
    <string name="icon_desc_dzikir_stiap_saat">icon Dzikir Stiap Saat</string>
    <string name="txt_doa_stiap_saat">Doa Stiap Saat</string>
    <string name="icon_desc_dzikir_doa_harian">icon dzikir doa harian</string>
    <string name="txt_dzikir_amp_doa_harian"><![CDATA[Dzikir & Doa Harian]]></string>
    <string name="icon_desc_dzikir_pagi_amp_petang"><![CDATA[icon dzikir pagi & petang]]></string>
    <string name="txt_dzikir_pagi_dan_petang"><![CDATA[Dzikir Pagi & Petang]]></string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="icon_dzikir_petang_background">icon Dzikir Petang Background</string>
    <string name="dzikir_petang">Dzikir Petang</string>
    <string name="icon_dzikir_pagi_background">Icon Dzikir Pagi Background</string>
    <string name="content_txt_icon_btn_dzikir_petang">Content Button Dzikir Petang</string>
    <string name="content_txt_icon_btn_dzikir_pagi">Content Button Dzikir Pagi</string>
    <string name="image_detail_aetikel_from_dataset">Image Detail Aetikel From Dataset</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Sedekah Adalah Bukti Keimanan</item>
        <item>Artikel 2 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 3 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 4 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 5 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 6 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 7 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 8 Artikel Artikel Artikel Artikel Artikel</item>
    </string-array>
    <string-array name="arr_desc_artikel">
        <item>Salah satu cara kita mengetahui kadar keimanan kita adalah dengan melihat apakah kita suka bersedekah atau tidak. Bersedekah tidak harus banyak dan tidak harus dengan uang, sehingga tidak kaya atau tidak punya uang bukanlah menjadi alasan kita untuk tidak bersedekah. Bersedekah dengan uang Rp 10.000, Rp 20.000, atau Rp 50.000 itu sudah cukup. Atau bersedekah dengan beras yang kita miliki sebanyak satu kilo atau dua kilo, ini pun sudah cukup. Sedekah adalah bukti keimanan. Bukti keimanan kita terhadap hari akhir, bahwasanya kelak di hari kiamat kita akan mendapat balasan pahala dari Allah, meskipun di dunia kita tidak mendapatkan apa-apa. Kita lelah bekerja mencari uang dan harta, lalu uang tersebut kita berikan tanpa kompensasi dan kita hanya berharap balasan di hari kiamat kelak.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
    </string-array>
    <string-array name="arr_dzikir_doa_harian">
        <item>Sebelum tidur</item>
        <item>Ketika mimpi buruk</item>
        <item>Bangun tidur</item>
        <item>Masuk WC/kamar mandi</item>
        <item>Keluar WC/kamar mandi</item>
        <item>Sebelum wudhu</item>
        <item>Setelah wudhu</item>
        <item>Mengenakan pakaian</item>
        <item>Melepas pakaian</item>
        <item>Keluar rumah</item>
        <item>Masuk rumah</item>
        <item>Pergi ke Masjid</item>
        <item>Masuk ke Masjid</item>
        <item>Keluar dari Masjid</item>
        <item>Ketika mendengar Adzan</item>
        <item>Setelah adzan</item>
        <item>Bersin</item>
        <item>Kepada orang yang berbuat baik kepadamu</item>
        <item>Ketika marah</item>
    </string-array>
</resources>