<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpArtikel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp">
    </androidx.viewpager2.widget.ViewPager2>

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>


    <!--  region Menu Dzikir & Doa  -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dasbord_menu"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_menu_dashboard"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_qauliah_shalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/gray"
            app:strokeWidth="0dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_doa"
                    android:contentDescription="@string/icon_desc_qauliah_shalat" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_menu_qauliah_shalat"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_doa_stiap_shalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/gray"
            app:strokeWidth="0dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_time"
                    android:contentDescription="@string/icon_desc_dzikir_stiap_saat" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_doa_stiap_saat"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_dzikir_doa_harian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/gray"
            app:strokeWidth="0dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/icon_desc_dzikir_doa_harian"
                    android:src="@drawable/ic_dzikir" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_dzikir_amp_doa_harian"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_dzikir_pagi_petang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/gray"
            app:strokeWidth="0dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_pagi_petang"
                    android:contentDescription="@string/icon_desc_dzikir_pagi_amp_petang" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_dzikir_pagi_dan_petang"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <!--  endregion  -->

</LinearLayout>