<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpArtikel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp">
    </androidx.viewpager2.widget.ViewPager2>

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dasbord_menu"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:text="@string/txt_menu_qauliah_shalat"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/card_qauliah_shalat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue_gray">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_doa"
                        android:contentDescription="@string/icon_desc_qauliah_shalat" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_menu_qauliah_shalat"
                    android:textColor="@color/blue"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_doa_stiap_shalat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue_gray">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/icon_desc_dzikir_stiap_saat"
                        android:src="@drawable/ic_time" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_doa_stiap_saat"
                    android:textColor="@color/blue"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/card_dzikir_doa_harian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue_gray">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_dzikir"
                        android:contentDescription="@string/icon_desc_dzikir_doa_harian" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_dzikir_amp_doa_harian"
                    android:textColor="@color/blue"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_dzikir_pagi_petang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue_gray">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/icon_desc_dzikir_pagi_amp_petang"
                        android:src="@drawable/ic_pagi_petang" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_dzikir_pagi_dan_petang"
                    android:textColor="@color/blue"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>



    </LinearLayout>